PP-5788: Log Stripe account updated events
At the moment we're only concerned with `requirements` and `payouts_enabled`
information.