@@ -1,7 +1,6 @@
 package uk.gov.pay.connector.gateway.stripe;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableList;
 import com.google.inject.Inject;
 import com.stripe.exception.SignatureVerificationException;
 import com.stripe.net.Webhook;
@@ -26,6 +25,7 @@ import java.util.Optional;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 import static uk.gov.pay.connector.charge.model.domain.ChargeStatus.AUTHORISATION_3DS_READY;
 import static uk.gov.pay.connector.charge.model.domain.ChargeStatus.AUTHORISATION_3DS_REQUIRED;
+import static uk.gov.pay.connector.gateway.stripe.StripeNotificationType.ACCOUNT_UPDATED;
 import static uk.gov.pay.connector.gateway.stripe.StripeNotificationType.PAYMENT_INTENT_AMOUNT_CAPTURABLE_UPDATED;
 import static uk.gov.pay.connector.gateway.stripe.StripeNotificationType.PAYMENT_INTENT_PAYMENT_FAILED;
 import static uk.gov.pay.connector.gateway.stripe.StripeNotificationType.SOURCE_CANCELED;
@@ -36,22 +36,24 @@ public class StripeNotificationService {
 
     private final Logger logger = LoggerFactory.getLogger(getClass());
 
-    private final List<StripeNotificationType> sourceTypes = ImmutableList.of(
+    private final List<StripeNotificationType> sourceTypes = List.of(
             SOURCE_CANCELED,
             SOURCE_CHARGEABLE,
             SOURCE_FAILED
     );
     
-    private final List<StripeNotificationType> paymentIntentTypes = ImmutableList.of(
+    private final List<StripeNotificationType> paymentIntentTypes = List.of(
             PAYMENT_INTENT_AMOUNT_CAPTURABLE_UPDATED, 
             PAYMENT_INTENT_PAYMENT_FAILED
     );
-    private final List<ChargeStatus> threeDSAuthorisableStates = ImmutableList.of(AUTHORISATION_3DS_REQUIRED, AUTHORISATION_3DS_READY);
+    
+    private final List<ChargeStatus> threeDSAuthorisableStates = List.of(AUTHORISATION_3DS_REQUIRED, AUTHORISATION_3DS_READY);
 
     private final ChargeService chargeService;
     private final Card3dsResponseAuthService card3dsResponseAuthService;
     private final ObjectMapper objectMapper;
     private final StripeGatewayConfig stripeGatewayConfig;
+    private final StripeAccountUpdatedHandler stripeAccountUpdatedHandler;
 
     private static final String PAYMENT_GATEWAY_NAME = PaymentGatewayName.STRIPE.getName();
     private static final long DEFAULT_TOLERANCE = 300L;
@@ -59,9 +61,11 @@ public class StripeNotificationService {
     @Inject
     public StripeNotificationService(Card3dsResponseAuthService card3dsResponseAuthService,
                                      ChargeService chargeService,
-                                     StripeGatewayConfig stripeGatewayConfig) {
+                                     StripeGatewayConfig stripeGatewayConfig, 
+                                     StripeAccountUpdatedHandler stripeAccountUpdatedHandler) {
         this.card3dsResponseAuthService = card3dsResponseAuthService;
         this.chargeService = chargeService;
+        this.stripeAccountUpdatedHandler = stripeAccountUpdatedHandler;
         objectMapper = new ObjectMapper();
         this.stripeGatewayConfig = stripeGatewayConfig;
     }
@@ -86,7 +90,13 @@ public class StripeNotificationService {
             processSourceNotification(notification);
         } else if (isAPaymentIntentNotification(notification)) {
             processPaymentIntentNotification(notification);
+        } else if (isAnAccountUpdatedNotification(notification)) {
+            stripeAccountUpdatedHandler.process(notification);
         }
+    }
+
+    private boolean isAnAccountUpdatedNotification(StripeNotification notification) {
+        return StripeNotificationType.byType(notification.getType()) == ACCOUNT_UPDATED;
     }
 
     private void processPaymentIntentNotification(StripeNotification notification) {
